src/main/kotlin/com/example/personal_account/errors/InvalidFileFormatException.kt
package com.example.personal_account.errors

class InvalidFileFormatException(message: String) : IllegalArgumentException(message)